--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "materialize-css": "^1.0.0-rc.2",
+    "mdb-ui-kit": "^3.10.1",
+    "mdbootstrap": "^4.20.0",
     "react": "^17.0.2",
     "react-burger-menu": "^2.7.1",
     "react-dom": "^17.0.2",
